--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,14 @@
 VITE_SUPABASE_URL=your-supabase-project-url
 VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
 
-# Server Configuration
-PORT=5000
+# Application URLs
+VITE_APP_URL=https://your-app-domain.vercel.app
+VITE_API_URL=https://your-app-domain.vercel.app
+
+# Environment
+NODE_ENV=production
 
 # Optional: Development settings
 # NODE_ENV=development
 # VITE_API_URL=http://localhost:5000
+# VITE_APP_URL=http://localhost:5173
