--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"node server/index.js\"",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "nodemon server/index.js"
+    "server": "node server/index.js",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
